# qnet-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: 01_basic_entanglement.py  02_monte_carlo_ensemble.py  03_routing_strategy_comparison.py  04_builtin_topology_generators.py  05_satellite_fiber_link.py  06_qkd_key_exchange.py  07_teleportation_relay.py  08_distributed_computing_star.py  09_distributed_mesh_ring_comparison.py  10_qnet_file_from_scratch.py  11_qnet_validation.py  12_qnet_diffing.py  13_compare_candidate_topologies.py  14_tuning_physical_constants.py  README.md
notebooks/: 01_gothamq_validation.ipynb  requirements.txt
python/: README.md  pyproject.toml  realtopology.py  test.py  test_example.py
python/examples/: 10_qnet_programmatic.py  12_mesh_network.py  14_link_utilization.py  1_basic_simuation.py  2_basic_simulation.py  3_test_latency_optimized_routing.py  4_test_highest_fidelity_routing.py  5_test_physical_constraints_failure.py  6_test_sensitivity_analysis.py  7_custom_simulation_config.py  8_topology_generation.py  9_qnet_file_load.py
python/qnet_core/: __init__.py
src/: config.rs  diff.rs  engine.rs  io.rs  lib.rs  memory.rs  metrics.rs  montecarlo.rs  network.rs  protocols.rs  scheduler.rs  simulation.rs  swapping.rs  validation.rs
src/api/: request.rs  response.rs
src/protocols/: distributed.rs  mod.rs  purification.rs  qkd.rs  teleportation.rs
src/python_bridge/: engine.rs  mod.rs  qnet_io.rs  types.rs
src/routing/: mod.rs  strategy.rs
src/topology/: generator.rs  hybrid.rs  mod.rs  repeater_chain.rs  telecom.rs
