[package]
name = "qnet-core"
version = "0.1.5"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
petgraph = "0.6"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

[features]
python = ["dep:pyo3"]

[lib]
name = "qnet_core"
crate-type = ["rlib", "cdylib"]